--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "lib_ml"
-version = "0.1.0"  # Adjust as needed or automate with Git
+version = "0.1.0"
 description = "Shared preprocessing logic"
 authors = [
     { name = "remla25-team13" }
@@ -18,4 +18,4 @@ dependencies = [
 ]
 
 [tool.setuptools.packages.find]
-where = ["lib_ml"]
+where = ["."]
