--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "scikit-learn==1.6.1",
-    "nltk==3.9.1"
+    "scikit-learn~=1.6.1",
+    "nltk~=3.9.1"
 ]
 
 [tool.setuptools.packages.find]
